buildscript {
    dependencies {
        classpath group: 'de.dynamicfiles.projects.gradle.plugins', name: 'javafx-gradle-plugin', version: '8.8.2'
    }
    repositories {
        mavenLocal()
        mavenCentral()
        maven { url 'https://jitpack.io/' }
        jcenter()
    }
}
configurations {
    provided
    compile.extendsFrom(provided)
}

apply plugin: 'java'
apply plugin: 'java-library'
apply plugin: 'javafx-gradle-plugin'

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    jcenter()
    mavenLocal()
    mavenCentral()
    maven { url 'https://jitpack.io/' }
}

dependencies {
    provided 'com.google.code.gson:gson:2.8.5'
    provided 'com.google.http-client:google-http-client:1.23.0'
    provided 'com.jfoenix:jfoenix:8.0.8'
    provided 'org.apache.commons:commons-text:1.7'
    provided 'com.github.Cydhra:Nidhogg:1.3'
    provided 'com.google.guava:guava:28.0-jre'
    provided 'org.apache.commons:commons-lang3:3.9'
    provided 'commons-io:commons-io:2.6'
    provided 'club.minnced:java-discord-rpc:2.0.2'
    //provided 'org.jfxtras:jmetro:5.3'
    provided 'org.tukaani:xz:1.8'
    provided 'org.apache.commons:commons-compress:1.18'
    provided "com.github.TheRandomLabs:CurseAPI:master-SNAPSHOT"
    provided 'net.lingala.zip4j:zip4j:2.1.0'
    provided group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.12.0'
    provided group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.12.0'
}

task cJar(type: Jar) {
    baseName = 'components'
    from sourceSets.main.output
    include 'net/dirtcraft/dirtlauncher/elements/PlayButton.class',
            'net/dirtcraft/dirtlauncher/elements/LoginBar.class'
}

jar {  
    manifest {
        attributes(
                'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
                'Main-Class': 'net.dirtcraft.dirtlauncher.Main'
        )
    }
    from configurations.provided.asFileTree.files.collect {zipTree(it)}
}

jfx {
    // minimal requirement for jfxJar-task
    mainClass = 'net.dirtcraft.dirtlauncher.Main'

    // minimal requirement for jfxNative-task
    vendor = 'DirtCraft'
}

sourceSets.main {
    resources {
        srcDirs = ["src/main/resources"]
        includes = ["**/*.*"]
    }
}

compileJava.options.encoding = 'UTF-8'